// ExplainMyBody Database Schema (SQLAlchemy + pgvector)
// Copy and paste this code into https://dbdiagram.io/

Project ExplainMyBody {
  database_type: 'PostgreSQL'
  Note: '''
    # ExplainMyBody LLM System
    - InBody 분석 파이프라인
    - 주간 운동/식단 계획 생성
    - Vector RAG (pgvector)
  '''
}

// ========================================
// 테이블 정의
// ========================================

Table users as U {
  id integer [pk, increment, note: 'Primary Key']
  username varchar(100) [unique, not null, note: '사용자명']
  email varchar(255) [unique, not null, note: '이메일']
  created_at timestamp [default: `now()`, note: '생성일시']

  Note: '사용자 기본 정보'
}

Table health_records as HR {
  id integer [pk, increment, note: 'Primary Key']
  user_id integer [not null, ref: > U.id, note: '사용자 ID (FK)']
  record_date timestamp [default: `now()`, note: '측정일시']
  measurements jsonb [not null, note: 'InBody 측정 데이터 (JSONB)']
  source varchar(50) [default: 'manual', note: '데이터 소스 (manual, inbody_ocr)']
  created_at timestamp [default: `now()`, note: '생성일시']

  Indexes {
    user_id
    (user_id, record_date) [name: 'idx_health_records_user_measured']
    measurements [type: gin, name: 'idx_health_records_measurements_gin']
  }

  Note: '''
    InBody 측정 데이터 저장
    - measurements: 체중, BMI, 체지방률, 골격근량, stage2, stage3 등
  '''
}

Table analysis_reports as AR {
  id integer [pk, increment, note: 'Primary Key']
  user_id integer [not null, ref: > U.id, note: '사용자 ID (FK)']
  record_id integer [not null, ref: > HR.id, note: 'InBody 측정 ID (FK)']
  report_date timestamp [default: `now()`, note: '분석일시']
  llm_output text [not null, note: 'LLM 생성 분석 텍스트']
  model_version varchar(100) [note: 'LLM 모델 (gpt-4.1, claude-3-5-sonnet, exaone3.5)']
  embedding_1536 vector(1536) [note: 'OpenAI 임베딩 (1536차원)']
  embedding_1024 vector(1024) [note: 'Ollama bge-m3 임베딩 (1024차원)']

  Indexes {
    user_id
    record_id
    embedding_1536 [type: hnsw, name: 'idx_analysis_reports_embedding_1536_hnsw', note: 'Vector similarity search (OpenAI)']
    embedding_1024 [type: hnsw, name: 'idx_analysis_reports_embedding_1024_hnsw', note: 'Vector similarity search (Ollama)']
  }

  Note: '''
    LLM 분석 리포트 + Vector Embeddings
    - Vector RAG를 위한 임베딩 저장
    - HNSW 인덱스로 빠른 유사도 검색
  '''
}

Table user_goals as UG {
  id integer [pk, increment, note: 'Primary Key']
  user_id integer [not null, ref: > U.id, note: '사용자 ID (FK)']
  goal_data jsonb [not null, note: '목표 데이터 (JSONB)']
  created_at timestamp [default: `now()`, note: '생성일시']
  is_active integer [default: 1, note: '활성화 여부 (1=활성, 0=비활성)']

  Indexes {
    user_id
    (user_id, is_active)
  }

  Note: '''
    사용자 목표 관리
    - goal_data: 목표 타입, 타겟 체중, 체지방률, 기한, 우선순위 등
  '''
}

Table weekly_plans as WP {
  id integer [pk, increment, note: 'Primary Key']
  user_id integer [not null, ref: > U.id, note: '사용자 ID (FK)']
  week_number integer [not null, note: '주차']
  start_date date [not null, note: '시작일']
  end_date date [not null, note: '종료일']
  plan_data jsonb [not null, note: '주간 계획 데이터 (JSONB)']
  model_version varchar(100) [note: 'LLM 모델']
  created_at timestamp [default: `now()`, note: '생성일시']

  Indexes {
    user_id
    (user_id, start_date)
    (user_id, week_number)
  }

  Note: '''
    주간 운동/식단 계획
    - plan_data: 7일간의 운동, 식단, 칼로리, 팁 등
    - Vector RAG로 InBody 분석 결과 반영
  '''
}

// ========================================
// 관계 (Relationships)
// ========================================

Ref: HR.user_id > U.id [delete: cascade]
Ref: AR.user_id > U.id [delete: cascade]
Ref: AR.record_id > HR.id [delete: cascade]
Ref: UG.user_id > U.id [delete: cascade]
Ref: WP.user_id > U.id [delete: cascade]

// ========================================
// 테이블 그룹 (Visual Grouping)
// ========================================

TableGroup "사용자 관리" {
  users
  user_goals
}

TableGroup "InBody 분석 파이프라인" {
  health_records
  analysis_reports
}

TableGroup "주간 계획 생성" {
  weekly_plans
}

// ========================================
// 추가 설명
// ========================================

Note workflow {
  '''
  ## 워크플로우

  ### 파이프라인 1: InBody 분석
  1. InBody OCR 데이터 입력
  2. 규칙 기반 stage2/stage3 계산
  3. health_records에 저장
  4. LLM으로 상세 분석 생성
  5. analysis_reports에 저장
  6. OpenAI + Ollama 임베딩 생성

  ### 파이프라인 2: 주간 계획 생성
  1. Vector RAG로 InBody 분석 검색 (top_k=6)
  2. Reranking (유사도 0.7 + 시간가중치 0.3)
  3. 사용자 목표/선호도 결합
  4. LLM으로 주간 계획 생성
  5. weekly_plans에 저장

  ## 기술 스택
  - PostgreSQL + pgvector
  - SQLAlchemy ORM
  - OpenAI (1536D) + Ollama bge-m3 (1024D)
  - HNSW 인덱스 (Vector Search)
  '''
}
